# BCIT-Flex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  bcit_rate_my_professors.txt  interface.py  main.py  pyproject.toml  requirements.txt  subjects.txt
.github/workflows/: ci.yml  sr.yml
alembic/: env.py
alembic/versions/: 09d662433ed7_add_course_table.py  178719586e69_add_user_table.py  1ffa8d44f772_add_cascade_delete.py  317d5306c14e_alter_course_url_length.py  6205b7a86c7f_add_offering_meeting_time.py  96a6aafa05d6_add_meeting_table.py  a69dfec6b6c5_add_subject_table.py  b663bbcd0412_alter_offering_crn_to_string.py  d76d960b31d5_add_nssequence_nextval_function.py
bcitflex/: __init__.py  account.py  app.py  auth.py  course.py  db.py  errors.py  interface.py  program.py
bcitflex/alembic/: alembic.ini  env.py  utils.py
bcitflex/alembic/versions/: 28a368e5676b_add_batch_process_table.py  6253c78c6b3a_add_program_table.py  6f25f0a31d7d_add_user_preference_table.py  7034009b08f2_add_surrogate_key_to_offering_table.py  83135043932d_add_on_delete_cascade_to_offering_term_.py  86cd0f1798a8_add_offering_table.py  871389a90551_add_subject_is_active_field.py  8a725632af56_add_unique_constraint_to_course.py  8cfa744d65d4_alter_course_field_types.py  9852f476f613_add_surrogate_key_to_subject_table.py  b746cd9b6b41_add_building_column_to_meeting.py  c3592c25409c_add_term_table.py  d0c807fc8328_unique_constraint_naming_convention.py  db4d9a6c53f9_add_prerequisite_tables.py  ee39506eab40_add_soft_delete.py  f1ef91929e99_add_timestamp_fields.py  f3d1f209a8fb_drop_soft_delete.py  f8ac7b4c05a9_add_soft_delete_rules.py
bcitflex/app_functions/: __init__.py  course_query.py
bcitflex/ext/: database.py
bcitflex/model/: __init__.py  base.py  batch_process.py  course.py  db_config.py  enum.py  meeting.py  offering.py  prerequisite.py  program.py  subject.py  term.py  user.py
bcitflex/modules/: bcit_courses.py  course.py  extract_course_data.py  meeting_table.py  offering.py  subject.py
bcitflex/scripts/: __init__.py  init_db.sql  load_programs.py  populate_subject.sql  programs.json  scrape_and_load.py
bcitflex/static/: style.css
bcitflex/templates/: base.html  course.html  courses.html  query_courses.html
bcitflex/templates/account/: account.html
bcitflex/templates/courses/: course.html  index.html
bcitflex/templates/errors/: 404.html
bcitflex/templates/programs/: index.html  program.html
modules/: course.py  offering.py  subject.py
resources/: bcit_rate_my_professors.txt  subjects.txt
tests/: __init__.py  alembic.ini  conftest.py  db_test_utils.py  load_test_data.py  test_extract_course_data.py  test_interface.py  test_offering.py
tests/app/: test_account.py  test_auth.py  test_auth_login.py  test_course.py  test_db.py  test_errors.py  test_factory.py  test_program.py
tests/app_functions/: test_course_query.py
tests/ext/: test_database.py
tests/model/: test_base.py  test_batch_process.py  test_course.py  test_meeting.py  test_offering.py  test_prerequisite.py  test_program.py  test_subject.py  test_term.py  test_user.py
tests/scripts/: test_load_programs.py  test_scrape_and_load.py
tests/test_data/: course_list_response.pkl  course_response.pkl  programs.json
