[tool.poetry]
name = "bcitflex"
version = "0.1.1"
description = "Browse BCIT Flex course offerings."
authors = ["Jonathan Biemond <jbiemond@my.bcit.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
selectolax = "^0.3.12"
pysimplegui = "^4.60.4"
tabulate = "^0.8.10"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # pycodestyle
    "B",  # bugbear
    "I",  # isort
    "RUF", # ruff,
]

ignore = [
    "E501", # black handles line length
]

fixable = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # pycodestyle
    "B",  # bugbear
    "I",  # isort
    "RUF", # ruff,
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
