[tool.poetry]
name = "bcitflex"
version = "3.4.3"
description = "Browse BCIT Flex course offerings."
authors = ["Jonathan Biemond <jbiemond@my.bcit.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
selectolax = "^0.3.12"
pysimplegui = "^4.60.4"
tabulate = "^0.8.10"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.5"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
python-semantic-release = "^8.0.4"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # pycodestyle
    "B",  # bugbear
    "I",  # isort
    "RUF", # ruff,
]

ignore = [
    "E501", # black handles line length
    "RUF012", # __table_args__ in SQLAlchemy models
    "B905", # zip without an explicit strict
    "E711", # ignore `== None` because it's valid in SQL statements
]

fixable = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # pycodestyle
    "B",  # bugbear
    "I",  # isort
    "RUF", # ruff,
]

extend-exclude = ["bcitflex/alembic/*"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
markers = [
    "empty_db: mark test to run with an empty database",
]

[tool.coverage.run]
omit = ["bcitflex/alembic/*"]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
assets = []
commit_message = "v{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"
build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false
upload_to_repository = false
upload_to_release = false
